- the gams writer can now write nonlinear and signedpower constraints 
- the pip and zimpl reader now create nonlinear constraints for polynomials of degree > 2
- implement presolving in exitpre() in cons_orbitope and cons_indicator
- implement possibility to force a restart in cons_indicator if enough indicator variables have been fixed

design:
- SCIP_HASHMAP now works also without block memory
- the old probing presolver presol_probing.{c.h} is now a propagator prop_probing.{c,h}, all corresponding  parameters moved as well
- the old redcost separator sepa_redcost.{c.h} is now a propagator prop_redcost.{c,h}, all corresponding  parameters moved as well
- moved all timings to type_timing.h
- outsourced propAndSolve() method in solve.c which calls domain propagation and solving of the lp and relaxation
- CIP format variable characters defined, e.g. SCIP_VARTYPE_INTEGER_CHAR
- add expresssion graph data structures and methods for reformulation, domain propagation, and simple convexity check on nonlinear expressions

Makefile
- via "PARASCIP=true" as a "Makefile" option it is possible to compile SCIP threadsafe in DEBUG-mode, (in OPT-mode it's not necessary)
- new variable $(INSTALLDIR) in Makefile which define installation directory for the libraries, $(INSTALLDIR)/lib/, 
  binary, $(INSTALLDIR)/bin, and include headers, $(INSTALLDIR)/include, the default value is the empty string
- new target in Makefile "install" performs "make" and copies the include headers, binary, and libraries
- new target in Makefile "uninstall" removes libraries, binary, and include headers form INSTALLDIR
- the 'make' parameter 'PARASCIP=true' leads to threadsafe message handlers where you need to call SCIPcreateMesshdlrPThreads and SCIPmessageSetHandler/SCIPmessageSetDefaultHandler and SCIPfreeMesshdlrPThreads; therefor we need to link with pthread library
- to link against IPOPT, only the base directory of an Ipopt installation need to be specified now;